--- a/my-app/tsconfig.json
+++ b/my-app/tsconfig.json
@@ -14,6 +14,7 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts",
-    "node_modules/@types/**/*.d.ts"
+    "node_modules/@types/**/*.d.ts",
+    "env.d.ts"
   ]
 }
