--- a/my-app/package.json
+++ b/my-app/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.13",
+    "ajv-keywords": "5.0.0",
     "expo": "~53.0.9",
     "expo-blur": "~14.1.4",
     "expo-constants": "~17.1.6",
@@ -24,7 +25,7 @@
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.1.7",
     "expo-linking": "~7.1.5",
-    "expo-router": "~5.0.6",
+    "expo-router": "^5.0.7",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.4",
