changing package.json

--- a/my-app/package.json
+++ b/my-app/package.json
@@ -8,7 +8,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "build:web": "expo export:web"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
